# home

./: .dockerignore  .gitattributes  .gitignore  .sh  2024-11-29.md  2024-12-01.md  2024-12-02.md  2024-12-14.md  2024-12-16.md  2024-12-21.md  2024-12-22.md  2025-02-27.md  2025-03-05 - Test Personalization.md  2025-03-15.md  AI.ipynb  CHANGLOG.md  CLAUDE.md  FutureMe-PRD.md  Hello.md  Java.md  README.md  Untitled 1.md  Untitled 2.canvas  Untitled.canvas  Untitled.md  _config.yml  assert.md  docker-compose.yml  git.md  index.md  scan_articles.py  start.bat  start_frontend.bat
.claude/: agents.json  mcp-servers.md
.obsidian/: app.json  community-plugins.json  core-plugins.json  daily-notes.json  graph.json  workspace.json
.smart-env/: smart_env.json
0. NHẤT HƯỚNG/: 1.MD  Vọc.md
0. Nhật Ký Calendar/: 19-03-2025.md
0. SẢN PHẨM RA LÒ/: List Sản Phẩm.md
0. ĐÔI DÒNG KINH NGHIỆM VỌC/: Vọc.md
0_/: TOÀN BỘ.md
0_English/: test ảnh.md
1. CHIẾN LƯỢC/: 2. 12042025.md  2. DANH SÁCH TOÀN DIỆN CÔNG TY FINTECH & TUYỂN DỤNG AI ENGINEERING.md  2. Định nghĩa về Finance - Bank, Investment, Stock.md  3. Product Engineering - trước giờ chỉ biết về AI Engineering với các options làm việc ở công ty lớn hay công ty nhỏ, domain Edu hay domain Finance, ....md  4. AI Engineering_ResearchEngineeringApplicationProduct.md  5. Feedback Ace ở Product - Bank - Fintech.md  Untitled.md  (+9 more)
3. FSDS/Module 5/B2_RAG/demo-rag/: README.md  example.env  main.py  pyproject.toml
3. FSDS/Module 5/B2_RAG/demo-rag/log/: log.md
3. FSDS/Module 5/B2_RAG/demo-rag/src/: generator.py  llm.py  prompt.py  settings.py  tools.py
(+6055 files in other folders)
